@@ -1,4 +1,4 @@
-// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.codeInspection.ex;
 
 import com.intellij.analysis.AnalysisScope;
@@ -55,7 +55,7 @@ public class GlobalInspectionContextEx extends GlobalInspectionContextBase {
   private Map<Path, Long> myProfile;
   protected InspectionProblemConsumer myProblemConsumer;
 
-  public GlobalInspectionContextEx(@NotNull Project project) {super(project);}
+  public GlobalInspectionContextEx(@NotNull Project project) { super(project); }
 
   public void launchInspectionsOffline(@NotNull AnalysisScope scope,
                                        @NotNull Path outputPath,
@@ -117,20 +117,22 @@ public class GlobalInspectionContextEx extends GlobalInspectionContextBase {
         }
       }
 
+      List<List<ScopeToolState>> states = new ArrayList<>();
+      for (Tools inspection : inspections) {
+        states.add(inspection.getTools());
+      }
       getRefManager().iterate(new RefVisitor() {
         @Override
         public void visitElement(@NotNull RefEntity refEntity) {
-          int i = 0;
-          for (Tools tools : inspections) {
-            for (ScopeToolState state : tools.getTools()) {
+          for (int i = 0; i < states.size(); i++) {
+            for (ScopeToolState state : states.get(i)) {
               try {
                 InspectionToolWrapper<?, ?> toolWrapper = state.getTool();
-                InspectionToolResultExporter presentation = getPresentation(toolWrapper);
                 BufferedWriter writer = writers[i];
                 if (writer != null &&
                     (myGlobalReportedProblemFilter == null ||
                      myGlobalReportedProblemFilter.shouldReportProblem(refEntity, toolWrapper.getShortName()))) {
-                  presentation.exportResults(e -> {
+                  getPresentation(toolWrapper).exportResults(e -> {
                     try {
                       JbXmlOutputter.collapseMacrosAndWrite(e, getProject(), writer);
                       writer.flush();
@@ -140,12 +142,14 @@ public class GlobalInspectionContextEx extends GlobalInspectionContextBase {
                     }
                   }, refEntity, d -> false);
                 }
+                else {
+                  return;
+                }
               }
               catch (Throwable e) {
                 LOG.error("Problem when exporting: " + refEntity.getExternalName(), e);
               }
             }
-            i++;
           }
         }
       });
@@ -221,7 +225,7 @@ public class GlobalInspectionContextEx extends GlobalInspectionContextBase {
         try {
           Path file = InspectionsResultUtil.getInspectionResultPath(outputDir, sameTools.getShortName());
           inspectionsResults.add(file);
-          Files.write(file, ("</" + PROBLEMS_TAG_NAME + ">").getBytes(StandardCharsets.UTF_8), StandardOpenOption.APPEND);
+          Files.writeString(file, "</" + PROBLEMS_TAG_NAME + ">", StandardOpenOption.APPEND);
         }
         catch (IOException e) {
           LOG.error(e);
@@ -234,10 +238,8 @@ public class GlobalInspectionContextEx extends GlobalInspectionContextBase {
     // export global inspections
     if (!globalToolsWithProblems.isEmpty()) {
       XMLOutputFactory xmlOutputFactory = XMLOutputFactory.newDefaultFactory();
-      ContainerUtil.splitListToChunks(globalToolsWithProblems, MAX_OPEN_GLOBAL_INSPECTION_XML_RESULT_FILES).forEach(inspections ->
-                                                                                                      exportResults(inspectionsResults,
-                                                                                                                    inspections, outputDir,
-                                                                                                                    xmlOutputFactory));
+      ContainerUtil.splitListToChunks(globalToolsWithProblems, MAX_OPEN_GLOBAL_INSPECTION_XML_RESULT_FILES)
+        .forEach(inspections -> exportResults(inspectionsResults, inspections, outputDir, xmlOutputFactory));
     }
   }
 
