@@ -2,27 +2,26 @@
 package com.intellij.util;
 
  import com.intellij.diagnostic.PerformanceWatcher;
-import com.intellij.openapi.application.ApplicationManager;
-import com.intellij.openapi.application.ModalityState;
-import com.intellij.openapi.application.impl.LaterInvocator;
-import com.intellij.testFramework.LightPlatformTestCase;
+ import com.intellij.openapi.application.ApplicationManager;
+ import com.intellij.openapi.application.ModalityState;
+ import com.intellij.openapi.application.impl.LaterInvocator;
+ import com.intellij.testFramework.LightPlatformTestCase;
  import com.intellij.testFramework.LoggedErrorProcessor;
  import com.intellij.util.containers.ContainerUtil;
-import com.intellij.util.ui.UIUtil;
-import org.jetbrains.annotations.NotNull;
+ import com.intellij.util.ui.UIUtil;
+ import org.jetbrains.annotations.NotNull;
 
- import java.util.ArrayList;
  import java.util.List;
-import java.util.Set;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.Future;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.TimeoutException;
-import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
+ import java.util.Set;
+ import java.util.concurrent.ExecutionException;
+ import java.util.concurrent.Future;
+ import java.util.concurrent.TimeUnit;
+ import java.util.concurrent.TimeoutException;
+ import java.util.concurrent.atomic.AtomicInteger;
+ import java.util.stream.Collectors;
+ import java.util.stream.Stream;
 
-import static org.assertj.core.api.Assertions.assertThat;
+ import static org.assertj.core.api.Assertions.assertThat;
 
  public class AlarmTest extends LightPlatformTestCase {
   public void testTwoAddsWithZeroDelayMustExecuteSequentially() throws Exception {
@@ -86,7 +85,7 @@ import static org.assertj.core.api.Assertions.assertThat;
     Set<Thread> used = ContainerUtil.newConcurrentSet();
     AtomicInteger executed = new AtomicInteger();
     int N = 100000;
-    List<Alarm> alarms = Stream.generate(() -> new Alarm(getTestRootDisposable())).limit(N).collect(Collectors.toList());
+    List<Alarm> alarms = Stream.generate(() -> new Alarm(getTestRootDisposable())).limit(N).toList();
     alarms.forEach(alarm -> alarm.addRequest(() -> {
       executed.incrementAndGet();
       used.add(Thread.currentThread());
@@ -170,19 +169,9 @@ import static org.assertj.core.api.Assertions.assertThat;
     assertEquals(2, sb.length());
   }
 
-  public void testExceptionDuringAlarmExecutionMustManifestItselfInTests() throws Exception {
+  public void testExceptionDuringAlarmExecutionMustManifestItselfInTests() {
     Alarm alarm = new Alarm(getTestRootDisposable());
-    List<Throwable> errors = new ArrayList<>();
-    LoggedErrorProcessor.executeWith(new LoggedErrorProcessor(){
-      @Override
-      public boolean processError(@NotNull String category,
-                                  String message,
-                                  Throwable t,
-                                  String @NotNull [] details) {
-        errors.add(t);
-        return false;
-      }
-    }, () -> {
+    Throwable error = LoggedErrorProcessor.executeAndReturnLoggedError(() -> {
       alarm.addRequest(() -> {
         throw new RuntimeException("wtf");
       }, 1);
@@ -196,8 +185,11 @@ import static org.assertj.core.api.Assertions.assertThat;
         }
       }
       assertTrue(caught);
-      Throwable t = assertOneElement(errors);
-      assertEquals("wtf", t.getMessage());
     });
+    assertEquals("wtf", error.getMessage());
+  }
+
+  public void testSingleAlarmMustRefuseToInstantiateWithWrongModality() {
+    assertThrows(IllegalArgumentException.class, () -> new SingleAlarm(() -> {}, 1, null, Alarm.ThreadToUse.SWING_THREAD, null));
   }
 }
