@@ -18,6 +18,7 @@ import org.jetbrains.annotations.Nullable;
 
 import java.io.File;
 import java.util.Collection;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -50,8 +51,8 @@ public class ImportTestsGroup extends ActionGroup {
     final List<File> fileNames = filePaths.stream()
       .map(fileName -> new File(testHistoryRoot, fileName))
       .filter(file -> file.exists())
-      .sorted((f1, f2) -> Long.compare(f2.lastModified(), f1.lastModified()))
-      .collect(Collectors.toList());
+      .sorted(Comparator.comparingLong(File::lastModified).reversed())
+      .toList();
     final int historySize = fileNames.size();
     final AnAction[] actions = new AnAction[historySize];
     for (int i = 0; i < historySize; i++) {
