@@ -15,6 +15,7 @@ import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.pom.Navigatable;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.containers.HashingStrategy;
+import com.intellij.util.containers.JBIterable;
 import com.intellij.vcsUtil.VcsUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -24,7 +25,6 @@ import java.util.*;
 import java.util.stream.Stream;
 
 import static java.util.Objects.hash;
-import static java.util.stream.Collectors.toList;
 
 public final class ChangesUtil {
   private static final Key<Boolean> INTERNAL_OPERATION_KEY = Key.create("internal vcs operation");
@@ -48,7 +48,7 @@ public final class ChangesUtil {
     Comparator.<LocalChangeList>comparingInt(list -> list.isDefault() ? -1 : 0)
       .thenComparing(list -> list.getName(), String::compareToIgnoreCase);
 
-  private ChangesUtil() {}
+  private ChangesUtil() { }
 
   @NotNull
   public static FilePath getFilePath(@NotNull Change change) {
@@ -112,48 +112,45 @@ public final class ChangesUtil {
 
   @NotNull
   public static List<FilePath> getPaths(@NotNull Collection<? extends Change> changes) {
-    return getPaths(changes.stream()).collect(toList());
+    return iteratePaths(changes).toList();
   }
 
   @NotNull
   public static List<File> getIoFilesFromChanges(@NotNull Collection<? extends Change> changes) {
-    return getPaths(changes.stream())
+    return iteratePaths(changes)
       .map(FilePath::getIOFile)
-      .distinct()
-      .collect(toList());
+      .unique()
+      .toList();
   }
 
   @NotNull
-  public static Stream<FilePath> getPaths(@NotNull Stream<? extends Change> changes) {
-    return changes.flatMap(ChangesUtil::getPathsCaseSensitive);
+  public static JBIterable<FilePath> iteratePaths(@NotNull Iterable<? extends Change> changes) {
+    return JBIterable.from(changes).flatMap(ChangesUtil::iteratePathsCaseSensitive);
   }
 
   @NotNull
-  public static Stream<FilePath> getPathsCaseSensitive(@NotNull Change change) {
+  public static JBIterable<FilePath> iteratePathsCaseSensitive(@NotNull Change change) {
     FilePath beforePath = getBeforePath(change);
     FilePath afterPath = getAfterPath(change);
 
-    return Stream.of(beforePath, !CASE_SENSITIVE_FILE_PATH_HASHING_STRATEGY.equals(beforePath, afterPath) ? afterPath : null)
-      .filter(Objects::nonNull);
+    if (CASE_SENSITIVE_FILE_PATH_HASHING_STRATEGY.equals(beforePath, afterPath)) {
+      return JBIterable.of(beforePath);
+    }
+    else {
+      return JBIterable.of(beforePath, afterPath).filterNotNull();
+    }
   }
 
   @NotNull
-  public static Stream<VirtualFile> getFiles(@NotNull Stream<? extends Change> changes) {
-    return getPaths(changes)
+  public static JBIterable<VirtualFile> iterateFiles(@NotNull Iterable<? extends Change> changes) {
+    return iteratePaths(changes)
       .map(FilePath::getVirtualFile)
       .filter(Objects::nonNull);
   }
 
   @NotNull
-  public static Stream<VirtualFile> getFilesFromPaths(@NotNull Stream<? extends FilePath> paths) {
-    return paths
-      .map(FilePath::getVirtualFile)
-      .filter(Objects::nonNull);
-  }
-
-  @NotNull
-  public static Stream<VirtualFile> getAfterRevisionsFiles(@NotNull Stream<? extends Change> changes) {
-    return changes
+  public static JBIterable<VirtualFile> iterateAfterRevisionsFiles(@NotNull Iterable<? extends Change> changes) {
+    return JBIterable.from(changes)
       .map(ChangesUtil::getAfterPath)
       .filter(Objects::nonNull)
       .map(FilePath::getVirtualFile)
@@ -161,18 +158,15 @@ public final class ChangesUtil {
   }
 
   public static VirtualFile @NotNull [] getFilesFromChanges(@NotNull Collection<? extends Change> changes) {
-    return getFiles(changes.stream()).toArray(VirtualFile[]::new);
+    return iterateFiles(changes).toArray(VirtualFile.EMPTY_ARRAY);
   }
 
-  public static Navigatable @NotNull [] getNavigatableArray(@NotNull Project project, VirtualFile @NotNull [] files) {
-    return getNavigatableArray(project, Stream.of(files));
-  }
-
-  public static Navigatable @NotNull [] getNavigatableArray(@NotNull Project project, @NotNull Stream<? extends VirtualFile> files) {
-    return files
+  public static Navigatable @NotNull [] getNavigatableArray(@NotNull Project project, @NotNull Iterable<? extends VirtualFile> files) {
+    return JBIterable.from(files)
       .filter(file -> !file.isDirectory())
       .map(file -> new OpenFileDescriptor(project, file))
-      .toArray(Navigatable[]::new);
+      .toList()
+      .toArray(Navigatable.EMPTY_NAVIGATABLE_ARRAY);
   }
 
   @Nullable
@@ -398,5 +392,57 @@ public final class ChangesUtil {
     if (!changeLists.get(0).isBlank()) return true;
 
     return false;
+  }
+
+  @NotNull
+  private static Stream<FilePath> getPathsCaseSensitive(@NotNull Change change) {
+    FilePath beforePath = getBeforePath(change);
+    FilePath afterPath = getAfterPath(change);
+
+    return Stream.of(beforePath, !CASE_SENSITIVE_FILE_PATH_HASHING_STRATEGY.equals(beforePath, afterPath) ? afterPath : null)
+      .filter(Objects::nonNull);
+  }
+
+  /**
+   * @deprecated Use {@link #iterateFiles(Iterable)}
+   */
+  @NotNull
+  @Deprecated(forRemoval = true)
+  public static Stream<VirtualFile> getFiles(@NotNull Stream<? extends Change> changes) {
+    return changes.flatMap(ChangesUtil::getPathsCaseSensitive)
+      .map(FilePath::getVirtualFile)
+      .filter(Objects::nonNull);
+  }
+
+  /**
+   * @deprecated Use {@link #iterateAfterRevisionsFiles(Iterable)}
+   */
+  @NotNull
+  @Deprecated(forRemoval = true)
+  public static Stream<VirtualFile> getAfterRevisionsFiles(@NotNull Stream<? extends Change> changes) {
+    return changes
+      .map(ChangesUtil::getAfterPath)
+      .filter(Objects::nonNull)
+      .map(FilePath::getVirtualFile)
+      .filter(Objects::nonNull);
+  }
+
+  /**
+   * @deprecated Use {@link #getNavigatableArray(Project, Iterable)}
+   */
+  @Deprecated(forRemoval = true)
+  public static Navigatable @NotNull [] getNavigatableArray(@NotNull Project project, VirtualFile @NotNull [] files) {
+    return getNavigatableArray(project, Stream.of(files));
+  }
+
+  /**
+   * @deprecated Use {@link #getNavigatableArray(Project, Iterable)}
+   */
+  @Deprecated(forRemoval = true)
+  public static Navigatable @NotNull [] getNavigatableArray(@NotNull Project project, @NotNull Stream<? extends VirtualFile> files) {
+    return files
+      .filter(file -> !file.isDirectory())
+      .map(file -> new OpenFileDescriptor(project, file))
+      .toArray(Navigatable[]::new);
   }
 }
