@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.plugins.gradle.service.task;
 
 import com.google.gson.GsonBuilder;
@@ -27,7 +27,6 @@ import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.util.ArrayUtil;
 import com.intellij.util.Consumer;
 import com.intellij.util.execution.ParametersListUtil;
-import gnu.trove.THash;
 import org.gradle.api.Task;
 import org.gradle.tooling.*;
 import org.gradle.tooling.model.build.BuildEnvironment;
@@ -225,7 +224,7 @@ public class GradleTaskManager implements ExternalSystemTaskManager<GradleExecut
                                               @NotNull GradleExecutionSettings effectiveSettings,
                                               @Nullable String gradleVersion) {
     final List<String> initScripts = new ArrayList<>();
-    List<GradleProjectResolverExtension> extensions = GradleProjectResolverUtil.createProjectResolvers(null).collect(Collectors.toList());
+    List<GradleProjectResolverExtension> extensions = GradleProjectResolverUtil.createProjectResolvers(null).toList();
     for (GradleProjectResolverExtension resolverExtension : extensions) {
       final String resolverClassName = resolverExtension.getClass().getName();
       Consumer<String> initScriptConsumer = script -> {
@@ -354,6 +353,30 @@ public class GradleTaskManager implements ExternalSystemTaskManager<GradleExecut
                   ProgressExecutionMode.IN_BACKGROUND_ASYNC, callback);
   }
 
+  public static void runCustomTaskScript(@NotNull Project project,
+                                   @NotNull @Nls String executionName,
+                                   @NotNull String projectPath,
+                                   @NotNull String gradlePath,
+                                   @NotNull ProgressExecutionMode progressExecutionMode,
+                                   @Nullable TaskCallback callback,
+                                   @NotNull String initScript,
+                                   @NotNull String taskName) {
+    UserDataHolderBase userData = new UserDataHolderBase();
+    userData.putUserData(INIT_SCRIPT_KEY, initScript);
+    userData.putUserData(ExternalSystemRunConfiguration.PROGRESS_LISTENER_KEY, SyncViewManager.class);
+
+    String gradleVmOptions = GradleSettings.getInstance(project).getGradleVmOptions();
+    ExternalSystemTaskExecutionSettings settings = new ExternalSystemTaskExecutionSettings();
+    settings.setExecutionName(executionName);
+    settings.setExternalProjectPath(projectPath);
+    String taskPrefix = gradlePath.endsWith(":") ? gradlePath : gradlePath + ':';
+    settings.setTaskNames(Collections.singletonList(taskPrefix + taskName));
+    settings.setVmOptions(gradleVmOptions);
+    settings.setExternalSystemIdString(GradleConstants.SYSTEM_ID.getId());
+    ExternalSystemUtil.runTask(settings, DefaultRunExecutor.EXECUTOR_ID, project, GradleConstants.SYSTEM_ID, callback,
+                               progressExecutionMode, false, userData);
+  }
+
   public static void runCustomTask(@NotNull Project project,
                                    @NotNull @Nls String executionName,
                                    @NotNull Class<? extends Task> taskClass,
@@ -361,10 +384,12 @@ public class GradleTaskManager implements ExternalSystemTaskManager<GradleExecut
                                    @NotNull String gradlePath,
                                    @Nullable String taskConfiguration,
                                    @NotNull ProgressExecutionMode progressExecutionMode,
-                                   @Nullable TaskCallback callback) {
-
+                                   @Nullable TaskCallback callback,
+                                   @NotNull Set<Class<?>> toolingExtensionClasses) {
     String taskName = taskClass.getSimpleName();
-    String paths = GradleExecutionHelper.getToolingExtensionsJarPaths(set(taskClass, GsonBuilder.class, THash.class, ExternalSystemException.class));
+    Set<Class<?>> tools = new HashSet<>(toolingExtensionClasses);
+    tools.addAll(set(taskClass, GsonBuilder.class, ExternalSystemException.class));
+    String paths = GradleExecutionHelper.getToolingExtensionsJarPaths(tools);
     String initScript = "initscript {\n" +
                         "  dependencies {\n" +
                         "    classpath files(" + paths + ")\n" +
@@ -380,19 +405,18 @@ public class GradleTaskManager implements ExternalSystemTaskManager<GradleExecut
                         "    }\n" +
                         "  }\n" +
                         "}\n";
-    UserDataHolderBase userData = new UserDataHolderBase();
-    userData.putUserData(INIT_SCRIPT_KEY, initScript);
-    userData.putUserData(ExternalSystemRunConfiguration.PROGRESS_LISTENER_KEY, SyncViewManager.class);
+    runCustomTaskScript(project, executionName, projectPath, gradlePath, progressExecutionMode, callback, initScript, taskName);
+  }
 
-    String gradleVmOptions = GradleSettings.getInstance(project).getGradleVmOptions();
-    ExternalSystemTaskExecutionSettings settings = new ExternalSystemTaskExecutionSettings();
-    settings.setExecutionName(executionName);
-    settings.setExternalProjectPath(projectPath);
-    String taskPrefix = gradlePath.endsWith(":") ? gradlePath : gradlePath + ':';
-    settings.setTaskNames(Collections.singletonList(taskPrefix + taskName));
-    settings.setVmOptions(gradleVmOptions);
-    settings.setExternalSystemIdString(GradleConstants.SYSTEM_ID.getId());
-    ExternalSystemUtil.runTask(settings, DefaultRunExecutor.EXECUTOR_ID, project, GradleConstants.SYSTEM_ID, callback,
-                               progressExecutionMode, false, userData);
+  public static void runCustomTask(@NotNull Project project,
+                                   @NotNull @Nls String executionName,
+                                   @NotNull Class<? extends Task> taskClass,
+                                   @NotNull String projectPath,
+                                   @NotNull String gradlePath,
+                                   @Nullable String taskConfiguration,
+                                   @NotNull ProgressExecutionMode progressExecutionMode,
+                                   @Nullable TaskCallback callback) {
+    runCustomTask(project, executionName, taskClass, projectPath, gradlePath, taskConfiguration, progressExecutionMode, callback,
+                  new HashSet<>());
   }
 }
